--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220803230053">
 </head>
 
 <body>
@@ -474,8 +474,8 @@
 </footer>
 	</div>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js?_v=20220803230053"></script>
+	<script src="js/script.js?_v=20220803230053"></script>
 </body>
 
 </html>
