--- a/product.html
+++ b/product.html
@@ -6,9 +6,8 @@
     <link rel="stylesheet" href="css/style.min.css?_v=20220829141708">
 </head>
 
-<body>
-	<div class="wrapper">
-		<header class="header">
+<div class="wrapper">
+ <header class="header">
         <div class="header__top top-header">
                 <div class="top-header__container">
                         <nav class="top-header__menu menu-top-header">
@@ -468,11 +467,37 @@
 
 </header>
 
-		<main>
-			<h1>H1 heading</h1>
-		</main>
+ <main class="page page__inner">
+  <div class="page__header">
+   <div class="page__container">
+    <h1 class="page__ttle title">Produc Card</h1>
+    <nav class="page__bredcrumbs bredcrumbs">
+     <ul class="bredcrumbs__list">
+      <li class="bredcrumbs__item">
+       <a href="" class="bredcrumbs__link _icon-arrow"><span>Home</span></a>
+      </li>
+      <li class="bredcrumbs__item">
+       <span href="" class="bredcrumbs__current">Product card</span>
+      </li>
+     </ul>
+    </nav>
+   </div>
+  </div>
+  <div class="catalog">
+   <div class="catalog__container">
+    <div class="catalog__body">
 
-		<footer class="footer">
+    </div>
+
+
+   </div>
+  </div>
+
+ </main>
+
+
+
+ <footer class="footer">
     <section class="footer__text text-footer">
         <div class="text-footer__container">
             <h1 class="text-footer__title">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</h1>
@@ -725,10 +750,145 @@
         </div>
     </div>
 </footer>
-	</div>
+</div>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js?_v=20220829141708"></script>
-	<script src="js/script.js?_v=20220829141708"></script>
+
+
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js?_v=20220829141708"></script> -->
+<script>
+
+
+ //rating
+ const ratings = document.querySelectorAll('.product-card__rating');
+ if (ratings.length > 0) {
+  initRatings();
+ }
+
+ function initRatings() {
+  let ratingActive, ratingValue;
+  for (let index = 0; index < ratings.length; index++) {
+   const rating = ratings[index];
+   initRating(rating);
+  }
+ }
+ function initRating(rating) {
+  initRatingVars(rating);
+
+  setRatingActiveWidth();
+
+  if (rating.classList.contains('rating_set')) {
+   setRating(rating);
+  }
+ }
+
+ function initRatingVars(rating) {
+  ratingActive = rating.querySelector('.rating__active');
+  ratingValue = rating.querySelector('.rating__value');
+ }
+
+ function setRatingActiveWidth(index = ratingValue.innerHTML) {
+  const ratingActiveWidth = index / 0.05;
+  ratingActive.style.width = `${ratingActiveWidth}%`;
+ }
+
+ function setRating(rating) {
+  const ratingItems = rating.querySelectorAll('.rating__item');
+  for (let index = 0; index < ratingItems.length; index++) {
+   const ratingItem = ratingItems[index];
+   ratingItem.addEventListener("mouseenter", function (e) {
+    initRatingVars(rating);
+    setRatingActiveWidth(ratingItem.value);
+   });
+
+   ratingItem.addEventListener("mouseleave", function (e) {
+    setRatingActiveWidth();
+   });
+
+   ratingItem.addEventListener("click", function (e) {
+    initRatingVars(rating);
+
+    if (rating.dataset.ajax) {
+     setRatingValue(ratingItem.value, rating);
+    } else {
+     ratingValue.innerHTML = index + 1;
+     setRatingActiveWidth();
+    }
+   });
+  }
+
+
+  async function setRatingValue(value, rating) {
+   if (!rating.classList.contains('rating_sending')) {
+    rating.classList.add('rating_sending');
+    //otpravka dannih(value) na server
+    let response = await fetch('rating.json', {
+     method: 'GET',
+
+     // OTPRAVKA NA REAL SERVER!!!!!!!!!!!!
+
+     // body: JSON.stringify({
+     // 	userRating: value
+     // }),
+     // headers: {
+     // 	'content-type': 'application/json'
+     // }
+    });
+    if (response.ok) {
+     const result = await response.json();
+
+     const newRating = result.newRating;
+
+     ratingValue.innerHTML = newRating;
+
+
+     setRatingActiveWidth();
+     rating.classList.remove('rating_sending');
+
+    } else {
+     alert("ERROR!!!");
+
+     rating.classList.remove('rating_sending');
+    }
+   }
+  }
+ }
+
+ //PopUp
+ function popupOpenClose(popup) {
+
+  /* Add div inside popup for layout if one doesn't exist */
+  if ($(".wrapper").length == 0) {
+   $(popup).wrapInner("<div class='wrapper'></div>");
+  }
+
+  /* Open popup */
+  $(popup).show();
+
+  /* Close popup if user clicks on background */
+  $(popup).click(function (e) {
+   if (e.target == this) {
+    if ($(popup).is(':visible')) {
+     $(popup).hide();
+    }
+   }
+  });
+
+  /* Close popup and remove errors if user clicks on cancel or close buttons */
+  $(popup).find("button[name=close]").on("click", function () {
+   if ($(".formElementError").is(':visible')) {
+    $(".formElementError").remove();
+   }
+   $(popup).hide();
+  });
+ }
+
+ $(document).ready(function () {
+  $("[data-js=open]").on("click", function () {
+   popupOpenClose($(".popup"));
+  });
+ });
+</script>
+<script src="js/app.min.js?_v=20220829141708"></script>
 </body>
 
 </html>
