--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220829141708">
+    <link rel="stylesheet" href="css/style.min.css?_v=20220904141458">
 </head>
 
 <div class="wrapper">
@@ -477,21 +477,158 @@
        <a href="" class="bredcrumbs__link _icon-arrow"><span>Home</span></a>
       </li>
       <li class="bredcrumbs__item">
+       <a href="" class="bredcrumbs__link _icon-arrow"><span>Products</span></a>
+      </li>
+      <li class="bredcrumbs__item">
        <span href="" class="bredcrumbs__current">Product card</span>
       </li>
      </ul>
     </nav>
    </div>
   </div>
-  <div class="catalog">
-   <div class="catalog__container">
-    <div class="catalog__body">
+  <div class="product">
+   <div class="product__container">
+    <div class="product__main main-product">
 
-    </div>
+     <div class="main-product__images images-product">
+      <div class="images-product__slider">
+       <div class="images-product__swiper">
+        <div class="images-product__slide-ibg">
+         <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" images-product__slide-ibg">
+         <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" images-product__slide-ibg">
+         <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" images-product__slide-ibg">
+         <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" images-product__slide-ibg">
+         <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+       </div>
+      </div>
+      <div class=" images-product__thumbs thumbs-image">
+         <div class="thumbs-image__swiper">
+          <div class="thumbs-image__slide-ibg">
+           <picture><source srcset="img/singleProduct/slide1.webp" type="image/webp"><img src="img/singleProduct/slide1.jpg" alt=""></picture>
+          </div>
+          <div class="thumbs-image__slide-ibg">
+           <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" thumbs-image__slide-ibg">
+           <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" thumbs-image__slide-ibg">
+           <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+        <div class=" thumbs-image__slide-ibg">
+           <picture><source srcset="img/singleProduct/slide1.webp"" type="image/webp"><img src="img/singleProduct/slide1.jpg"" alt=""></picture>
+        </div>
+       </div>
+      </div>
+     </div>
+     <div class=" main-product__body body-product">
+           <div class="body-product__header header-product">
+            <div class="header-product__line">
+             <h1 class="header-product__title">Knife swipe</h1>
+             <a href="" class="header-product__link _icon-compare"></a>
+             <a href="" class="header-product__link _icon-favorit"></a>
+            </div>
+            <div class="header-product__rating rating_set">
+             <div class="rating__body">
+              <div class="rating__active"></div>
+              <div class="rating__items">
+               <input type="radio" class="rating__item" value="1" name="rating">
+               <input type="radio" class="rating__item" value="2" name="rating">
+               <input type="radio" class="rating__item" value="3" name="rating">
+               <input type="radio" class="rating__item" value="4" name="rating">
+               <input type="radio" class="rating__item" value="5" name="rating">
+              </div>
+             </div>
+             <div class="rating__value">3.6</div>
+            </div>
+           </div>
+           <div class="body-product__table table-product">
+            <div class="table-product__lable">
+             Article:</div>
+            <div class="table-product__value">AF0000001952</div>
+            <div class="table-product__lable">
+             Trade Marck:</div>
+            <div class="table-product__value">WUESTHOF</div>
+            <div class="table-product__lable">
+             Series:</div>
+            <div class="table-product__value">Classic Ikon</div>
+            <div class="table-product__lable">
+             Bonuses:</div>
+            <div class="table-product__value">38</div>
+           </div>
+           <div class="body-product__options options-product">
+            <div class="options-product__label">Steel:</div>
+            <div class="options-product__value">
+             <select name="form[]" class="control" id="">
+              <option value="1" class="option" selected>Option 1</option>
+              <option value="2" class="option" selected>Option 2</option>
+              <option value="3" class="option" selected>Option 3</option>
+              <option value="4" class="option" selected>Option 4</option>
+             </select>
+            </div>
+            <div class="options-product__label">Steel:</div>
+            <div class="options-product__value">
+             <select name="form[]" class="control" id="">
+              <option value="1" class="option" selected>Option 1</option>
+              <option value="2" class="option" selected>Option 2</option>
+              <option value="3" class="option" selected>Option 3</option>
+              <option value="4" class="option" selected>Option 4</option>
+             </select>
+            </div>
+            <div class="options-product__label">Steel:</div>
+            <div class="options-product__value">
+             <select name="form[]" class="control" id="">
+              <option value="1" class="option" selected>Option 1</option>
+              <option value="2" class="option" selected>Option 2</option>
+              <option value="3" class="option" selected>Option 3</option>
+              <option value="4" class="option" selected>Option 4</option>
+             </select>
+            </div>
+            <div class="options-product__label">Steel:</div>
+            <div class="options-product__value">
+             <select name="form[]" class="control" id="">
+              <option value="1" class="option" selected>Option 1</option>
+              <option value="2" class="option" selected>Option 2</option>
+              <option value="3" class="option" selected>Option 3</option>
+              <option value="4" class="option" selected>Option 4</option>
+             </select>
+            </div>
+           </div>
+           <div class="body-product__actions actions-product">
+            <div class="actions-product__price">3 865$</div>
+            <div class="actions-product__row">
+             <div class="actions-product__quantity quantity">
+              <button type="button" class="quantity__button quantity__button_plus"></button>
+              <div class="quantity__input">
+               <input type="text" autocomplete="off" name="form[]" value="1">
+              </div>
+              <button type="button" class="quantity__button quantity__button_minus"></button>
+             </div>
+             <div class="actions-product__buttons">
+              <a href="" class="actions-product__cart button"><span class=" _icon-cart"> </span><span
+                class="text-fix">To
+                Cart</span></a>
+              <a href="" class="actions-product__cart button button_black">Buy by 1 click</a>
+             </div>
+            </div>
+           </div>
 
 
-   </div>
-  </div>
+
+          </div>
+
+
+         </div>
+        </div>
 
  </main>
 
@@ -754,12 +891,12 @@
 
 
 
-<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js?_v=20220829141708"></script> -->
+<!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js?_v=20220904141458"></script> -->
 <script>
 
 
  //rating
- const ratings = document.querySelectorAll('.product-card__rating');
+ const ratings = document.querySelectorAll('[class*="__rating"]');
  if (ratings.length > 0) {
   initRatings();
  }
@@ -888,7 +1025,7 @@
   });
  });
 </script>
-<script src="js/app.min.js?_v=20220829141708"></script>
+<script src="js/app.min.js?_v=20220904141458"></script>
 </body>
 
 </html>
