--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.min.css?_v=20220904141458">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/style.min.css?_v=20220904141458">
 </head>
 
 <div class="wrapper">
@@ -131,7 +132,8 @@
 								<p class="inside-page__text">
 									Comming soon ...
 								</p>
-								<a href="#" class="inside-page__btn inside-page__btn--ski">View deals</a>
+								<a href="luxtrade/index.html" class="inside-page__btn inside-page__btn--ski">View
+									deals</a>
 							</div>
 						</div>
 					</div>
